[package]
name = "bevy_vox"
version = "0.3.0"
authors = ["erasin <erasinoo@gmail.com>"]
edition = "2021"
description = "Load MagicaVoxel Vox file for bevy engine "
license = "MIT"
repository = "https://github.com/erasin/bevy_vox"
documentation = "https://docs.rs/bevy_vox"
readme = "README.md"
keywords = ['voxel', 'MagicaVoxel', 'game', 'bevy']
exclude = ["assets", "examples"]

[dependencies]
bevy_ecs = "0.8.0"
bevy_app = "0.8.0"
bevy_asset = "0.8.0"
bevy_render = "0.8.0"
bevy_utils = "0.8.0"
bevy_pbr = "0.8.0"
bevy_scene = "0.8.0"
bevy_transform = "0.8.0"
bevy_math = "0.8.0"
bevy_hierarchy = "0.8.0"
anyhow = "1.0.58"
thiserror = "1.0.31"
dot_vox = {version = "4.1.0", git = "https://github.com/ostwilkens/dot_vox.git", branch = "serde"}

[dev-dependencies]
bevy = "0.8.0"
