[package]
name = "bevy_vox"
version = "0.3.0"
authors = ["erasin <erasinoo@gmail.com>"]
edition = "2021"
description = "Load MagicaVoxel Vox file for bevy engine "
license = "MIT"
repository = "https://github.com/erasin/bevy_vox"
documentation = "https://docs.rs/bevy_vox"
readme = "README.md"
keywords = ['voxel', 'MagicaVoxel', 'game', 'bevy']
exclude = ["assets", "examples"]

[dependencies]
bevy_ecs = { git = "https://github.com/IceSentry/bevy.git", rev="2b0f4f9053f58bd9c41ee2f8acb1f5e843161c75" }
bevy_app = { git = "https://github.com/IceSentry/bevy.git", rev="2b0f4f9053f58bd9c41ee2f8acb1f5e843161c75" }
bevy_asset = { git = "https://github.com/IceSentry/bevy.git", rev="2b0f4f9053f58bd9c41ee2f8acb1f5e843161c75" }
bevy_render = { git = "https://github.com/IceSentry/bevy.git", rev="2b0f4f9053f58bd9c41ee2f8acb1f5e843161c75" }
bevy_utils = { git = "https://github.com/IceSentry/bevy.git", rev="2b0f4f9053f58bd9c41ee2f8acb1f5e843161c75" }
bevy_pbr = { git = "https://github.com/IceSentry/bevy.git", rev="2b0f4f9053f58bd9c41ee2f8acb1f5e843161c75" }
bevy_scene = { git = "https://github.com/IceSentry/bevy.git", rev="2b0f4f9053f58bd9c41ee2f8acb1f5e843161c75" }
bevy_transform = { git = "https://github.com/IceSentry/bevy.git", rev="2b0f4f9053f58bd9c41ee2f8acb1f5e843161c75" }
bevy_math = { git = "https://github.com/IceSentry/bevy.git", rev="2b0f4f9053f58bd9c41ee2f8acb1f5e843161c75" }
bevy_hierarchy = { git = "https://github.com/IceSentry/bevy.git", rev="2b0f4f9053f58bd9c41ee2f8acb1f5e843161c75" }
anyhow = "1.0.58"
thiserror = "1.0.31"
dot_vox = {version = "4.1.0", git = "https://github.com/ostwilkens/dot_vox.git", branch = "serde"}

[dev-dependencies]
bevy = { git = "https://github.com/IceSentry/bevy.git", rev="2b0f4f9053f58bd9c41ee2f8acb1f5e843161c75" }
